--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 backhand = "0.18.0"
+futures = "0.3.30"
 nix = { version = "0.29.0", features = ["fs"] }
 rayon = "1.10.0"
 tokio = { version = "1.38.0", features = ["full"] }
